Adicionando relatorio dados cliente